<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1F15B"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/guess"
            android:textAlignment="center"
            android:textColor="#1976D2"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/inputnumber"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm"
            app:backgroundTint="#303F9F"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" />

    </LinearLayout>


</layout>