<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FA5454"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview5"
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/fail"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/answeris" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:text="" />

        </LinearLayout>

        <Button
            android:id="@+id/playagainlose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/play_again"
            android:textSize="30sp" />


    </LinearLayout>

</layout>